JastAddExtensions/JastAddModules/module_tests/JASTADD_TESTS/Test9.result
Errors:
test/Test9.java:4:
  Semantic Error: AST child Node is multiply declared

